qtmobility (1.0.1-3) UNRELEASED; urgency=low

  * Disable Qt Mobility Bearer management module. It is merged in Qt as Qt
    Network Bearer management module after Qt 4.7.0 beta 2 release.
  * Update debian/control:
    - add libgstreamer-plugins-base0.10-dev build dependency.
    - add libqt4-sql-sqlite dependency to libqtsensors1 package.
    - add hal dependency to libqtserviceframework1 package.

 -- Fathi Boudra <fabo@debian.org>  Tue, 20 Jul 2010 17:35:13 +0300

qtmobility (1.0.1-2) experimental; urgency=low

  * Update debian/control:
    - enable Qt Mobility MultimediaKit module.
    - build depends on Qt 4.7.0~beta2.
  * Add qtmobility-l10n package.

 -- Fathi Boudra <fabo@debian.org>  Tue, 13 Jul 2010 09:40:30 +0300

qtmobility (1.0.1-1) experimental; urgency=low

  * Initial release (Closes: #585012)

 -- Fathi Boudra <fabo@debian.org>  Wed, 30 Jun 2010 09:17:43 +0300